--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "book-app",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "app.js",
     "type": "module",
     "scripts": {
         "start": "live-server",
@@ -23,5 +23,8 @@
         "eslint": "^8.38.0",
         "rollup": "^3.20.2",
         "rollup-plugin-import-css": "^3.2.1"
+    },
+    "dependencies": {
+        "on-change": "^4.0.2"
     }
 }
